[package]
name = "bdk-reserves"
version = "0.27.0"
authors = ["Richard Ulrich <richard.ulrich@seba.swiss>"]
edition = "2018"
description = "Proof of reserves for bitcoin dev kit"
keywords = ["proof", "reserves", "bitcoin", "psbt"]
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bitcoindevkit/bdk-reserves"

[dependencies]
#bdk = { version = "0.26", default-features = false }
bdk = { git = "https://github.com/bitcoindevkit/bdk.git", tag = "v0.27.0-rc.1", default-features = false }


bitcoinconsensus = "0.19.0-3"
log = "^0.4"

[dev-dependencies]
rstest = "^0.11"
bdk-testutils = "^0.4"
#bdk = { version = "0.26", default-features = true }
bdk = { git = "https://github.com/bitcoindevkit/bdk.git", tag = "v0.27.0-rc.1", default-features = true }
electrsd = { version = "0.22", features = ["bitcoind_22_0", "electrs_0_9_1"] }
base64 = "^0.13"