[package]
name = "bdk-reserves"
version = "0.28.1"
authors = ["Richard Ulrich <richard.ulrich@aminagroup.com>"]
edition = "2018"
description = "Proof of reserves for bitcoin dev kit"
keywords = ["proof", "reserves", "bitcoin", "psbt"]
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bitcoindevkit/bdk-reserves"

[dependencies]
bdk = { version = "0.28", default-features = false }
bitcoinconsensus = "0.19.0-3"
log = "^0.4"

[dev-dependencies]
rstest = "^0.11"
bdk-testutils = "^0.4"
bdk = { version = "0.28", default-features = true }
electrsd = { version = "0.23", features = ["bitcoind_22_0", "electrs_0_9_1"] }
